// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question editor Node builds the expected component 1`] = `
<div
  className="component obojobo-draft--chunks--question is-viewed is-mode-practice"
>
  <div
    className="flipper question-editor"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center add-solution"
      >
        <button
          onClick={[Function]}
        >
          Add Solution
        </button>
      </div>
    </div>
  </div>
  <button
    className="delete-node"
    onClick={[Function]}
  >
    X
  </button>
</div>
`;

exports[`Question editor Node component adds Solution 1`] = `"<div class=\\"component obojobo-draft--chunks--question is-viewed is-mode-practice\\"><div class=\\"flipper question-editor\\"><div class=\\"content-back\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center add-solution\\"><button>Add Solution</button></div></div></div><button class=\\"delete-node\\">X</button></div>"`;

exports[`Question editor Node component deletes self 1`] = `"<div class=\\"component obojobo-draft--chunks--question is-viewed is-mode-practice\\"><div class=\\"flipper question-editor\\"><div class=\\"content-back\\"></div></div><button class=\\"delete-node\\">X</button></div>"`;

exports[`Question editor Solution component 1`] = `
<div
  className="solution-editor"
>
  <button
    className="delete-node"
    onClick={[Function]}
  >
    X
  </button>
</div>
`;

exports[`Question editor Solution component deletes self 1`] = `"<div class=\\"solution-editor\\"><button class=\\"delete-node\\">X</button></div>"`;

exports[`Question editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "solution": Object {},
    },
  },
  "key": "mockKey",
  "nodes": Array [
    undefined,
    Object {
      "data": Object {
        "content": undefined,
      },
      "key": undefined,
      "object": "block",
      "type": "mockNode",
    },
    Object {
      "nodes": Array [
        undefined,
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Question.Solution",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Question editor oboToSlate converts an OboNode to a Slate node without a solution 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "key": "mockKey",
  "nodes": Array [
    undefined,
    Object {
      "data": Object {
        "content": undefined,
      },
      "key": undefined,
      "object": "block",
      "type": "mockNode",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Question editor plugins.renderNode renders a question when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Question",
    }
  }
/>
`;

exports[`Question editor plugins.renderNode renders a solution when passed 1`] = `
<Solution
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Question.Solution",
    }
  }
/>
`;

exports[`Question editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    undefined,
    Object {
      "children": Array [],
      "id": undefined,
      "type": "mockNode",
    },
  ],
  "content": Object {
    "solution": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
